--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Lobby.cshtml
@@ -15,7 +15,7 @@
 <div class="lobby-body">
 	<section id="lobbyQuoteAndNavSection">
 		<div id="lobbyQuoteContainer">
-			Twój osobisty kalendarz stworzony na miare Twoich potrzeb.
+			<span>Twój osobisty kalendarz stworzony na miare Twoich potrzeb.</span>
 		</div>
 		<nav id="lobbyNavContainer">
 			<div class="lobby-nav-link-container selected-nav-link">
