--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_Register.cshtml
@@ -2,7 +2,7 @@
 
 <div id="registerPageContainer" class="slick-contact-form">
 	<div class="form-header">
-		<div id="btnClose-registerPopup" data-bind="click: closeRegisterPopupOnClick" class="btn-close hover-cursor-pointer 1px-hover"><span class="close-text">zamknij</span></div>
+		<div id="btnClose-registerPopup" data-bind="click: closeRegisterPopupOnClick" class="btn-close hover-cursor-pointer"><span class="close-text">zamknij</span></div>
 	</div>
 	<div class="form-body">
 		@using (Html.BeginForm("Register", "Account", FormMethod.Post, new { id = "registerForm" }))
