--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_ConfirmationPopupBox.cshtml
@@ -5,11 +5,11 @@
 		</span>
 	</div>
 	<div style="margin-top:20px;">
-		<div class="confirmation-popupbox-yesbtn hover-cursor-pointer 1px-hover" style="display: inline-block;">
+		<div class="confirmation-popupbox-yesbtn hover-cursor-pointer" style="display: inline-block;">
 			<span class="save-text">Tak</span>
 		</div>
 
-		<div class="confirmation-popupbox-nobtn hover-cursor-pointer 1px-hover" data-bind="click: function () { $root.hideConfirmationPopupBox($element) }" style="display: inline-block;">
+		<div class="confirmation-popupbox-nobtn hover-cursor-pointer" data-bind="click: function () { $root.hideConfirmationPopupBox($element) }" style="display: inline-block;">
 			<span class="close-text">Nie</span>
 		</div>
 	</div>
