added text shadow in lobby nav on hover

--- a/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
+++ b/KalendarzKarierySolution/KalendarzKariery/Content/Site.css
@@ -75,7 +75,7 @@ header, footer, nav, section, div {
 }
 
 .selected-nav-link {
-	text-shadow: 0px 1px 1px #D8D4C2;
+	text-shadow: 0px 1px 1px #BDB8A4;
 }
 
 #lobbyQuoteContainer {
