--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_Details.cshtml
@@ -132,7 +132,7 @@
 			<div>18<span class="small-minutes">00</span></div>
 			<div>19<span class="small-minutes">00</span></div>
 			<div>20<span class="small-minutes">00</span></div>
-			<div style="position: absolute; right: 0; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
+			<div style="position: absolute; right: 10px; width: 26px;"><span>21</span><span class="small-minutes">00</span></div>
 		</div>
 		<div style="width: 100%; height: 2px;"></div>
 		<div class="table-details-body">
@@ -201,5 +201,4 @@
 
 @Html.Partial("_DetailsSettings", @Model)
 
-<div style="height: 200px; width: 50%; margin-top: 100px">
 </div>
