--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/SharedPartials/_AddNewEvent.cshtml
@@ -20,7 +20,7 @@
 
 						<div class="div-separator">
 							<div>
-								@Html.LabelFor( m => m.Event.Title, new { @class = "form-label", style = "width:245px;" } )
+								@Html.LabelFor( m => m.Event.Title, new { @class = "form-label", style = "width:235px;" } )
 								<div>
 									@Html.ValidationMessageFor( m => m.Event.Title )
 								</div>
@@ -77,7 +77,7 @@
 
 						<div class="div-separator" style="margin-bottom: 40px;">
 							<div>
-								@Html.LabelFor( m => m.Event.StartDate, new { @class = "form-label", style = "width:248px;" } )
+								@Html.LabelFor( m => m.Event.StartDate, new { @class = "form-label", style = "width:240px;" } )
 								<div>
 									<div>
 										@Html.ValidationMessageFor( m => m.StartDate.Day )
@@ -156,15 +156,15 @@
 							<div class="div-separator">
 								@Html.LabelFor( m => m.Event.Price, new { @class = "form-label", @style = "vertical-align:top;" } )
 								<div>
-									@Html.ValidationMessageFor( m => m.Event.Price )
+									@Html.ValidationMessageFor( m => m.Event.Price, "Pole \"Opłata za wstęp zawiera nieprawidłową wartość.\" ")
 								</div>
-								@Html.TextBoxFor( m => m.Event.Price, new { style = "width:50px;", maxlength = 6, data_bind = "value: price" } )<span>ZŁ.</span>
+								@Html.TextBoxFor( m => m.Event.Price, new { style = "width:50px;", maxlength = 7, data_bind = "value: price" } )<span>ZŁ.</span>
 							</div>
 
 							<div class="div-separator" style="margin-bottom:40px;">
 								@Html.LabelFor( m => m.Event.OccupancyLimit, new { @class = "form-label", @style = "vertical-align:top;" } )
 								<div>
-									@Html.ValidationMessageFor( m => m.Event.OccupancyLimit )
+									@Html.ValidationMessageFor( m => m.Event.OccupancyLimit, "Pole \"Limit Miejsc\" musi zawierać same cyfry." )
 								</div>
 								@Html.TextBoxFor( m => m.Event.OccupancyLimit, new { style = "width:50px;", maxlength = 6, data_bind = "value: occupancyLimit" } )
 							</div>
