added hammer.js and touch swipes

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -6,16 +6,6 @@
 	<ul class="slides-container">
 		<li>
 			<div id="slide-item-lobby">
-				<div id="siteNavLegendContainer">
-					<div style="margin: 0 auto; margin-top: 16px; position: relative;">
-						<div class="site-legend-border"></div>
-						<div class="site-legend-border"></div>
-						<div class="site-legend-border"></div>
-					</div>
-					<span style="position: relative; left: -7px;">Strona Glówna</span>
-					<span style="position: relative; left: -7px;">| Kalendarz |</span>
-					<span style="position: relative; left: -7px;">Dziennik</span>
-				</div>
 				<div id="lobbyBg">
 					@*<img src="~/Images/KalendarzTlo.png" alt="background" />*@
 					<div class="dotted-page-overlay"></div>
@@ -82,6 +72,7 @@
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
+<script src="~/Scripts/Lib/HammerJS/hammer.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
