--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -72,6 +72,7 @@
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
+<script src="~/Scripts/Lib/HammerJS/hammer.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
