--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/Index.cshtml
@@ -72,18 +72,18 @@
 <script src="~/Scripts/CalendarWidget/calendarWidget.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.animate-enhanced.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.easing.1.3.js"></script>
-<script src="~/Scripts/Lib/HammerJS/hammer.min.js"></script>
 <script src="~/Scripts/CalendarWidget/Slider/jquery.superslides.min.js"></script>
 
 <script src="~/Scripts/JSModels/KKEventModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventModelObservable.js"></script>
 <script src="~/Scripts/JSModels/KKDateModel.js"></script>
 <script src="~/Scripts/JSModels/KKEventDateModel.js"></script>
-
 <script src="~/Scripts/JSViewModels/CalendarViewModel.js"></script>
+
 <script src="~/Scripts/Helpers/EventColorHelper.js"></script>
 <script src="~/Scripts/Helpers/EventTreeBuilder.js"></script>
 <script src="~/Scripts/Helpers/EventFactory.js"></script>
+<script src="~/Scripts/Helpers/WebApiCaller.js"></script>
 
 <script src="~/Scripts/Program.js"></script>
 
@@ -93,11 +93,10 @@
 		//////////////////////////
 		//Start of program
 		//////////////////////////
-		
-		var PROGRAM = Program;
 		var indexViewModel = @Html.Raw( Json.Encode( @Model.IndexViewModel ) );
 		var userName = '@User.Identity.Name';
 
+		var PROGRAM = Program;
 		PROGRAM.initializeJQueryExtentionMethods();
 		PROGRAM.initializeAndStartSpinner();
 		PROGRAM.initialize(indexViewModel, userName);
