--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/LobbyPage/_LobbyEventsMenuItems.cshtml
@@ -9,7 +9,7 @@
 			<span>Inne</span>
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[7].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[7].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -20,7 +20,7 @@
 
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -31,7 +31,7 @@
 			<span>Wydarzenia</span>
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[0].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[1].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[1].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -42,7 +42,7 @@
 
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[6].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[6].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -52,7 +52,7 @@
 			<span>Zajęcia</span>
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[2].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -63,7 +63,7 @@
 
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[3].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].upcoming() : '-'"></div>
 		</div>
 	</div>
 
@@ -73,7 +73,7 @@
 			<span>Kursy</span>
 		</div>
 		<div class="menu-item-number-container">
-			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[4].events.upcoming() : '-'"></div>
+			<div class="menu-item-number-upcoming" data-bind="text: $root.publicEventTreeCountBasedOnEventKind[5].upcoming() != 0 ? $root.publicEventTreeCountBasedOnEventKind[5].upcoming() : '-'"></div>
 		</div>
 	</div>
 
