changed calendarViewModel to appViewModel, added delete to webApiCaller, fixed countTree functionality

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 	<header>
 	</header>
 
-	<section id="mainContainer">
+	<div id="mainContainer">
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
 		</div>
@@ -21,6 +21,6 @@
 
 		@RenderBody()
 
-	</section>
+	</div>
 </body>
 </html>
