--- a/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Shared/_LayoutMobile.cshtml
@@ -13,7 +13,7 @@
 	<header>
 	</header>
 
-	<section id="mainContainer">
+	<div id="mainContainer">
 		<div id="spinnerContainer">
 			<span id="spinnerText"></span>
 		</div>
@@ -22,6 +22,6 @@
 
 		@RenderBody()
 
-	</section>
+	</div>
 </body>
 </html>
