transformed server events json into KKEventModels

--- a/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
+++ b/KalendarzKarierySolution/KalendarzKariery/Views/Home/DetailsPage/_DetailsEventInfo.cshtml
@@ -24,7 +24,7 @@
 
 		<div class="event-block-info-link">
 			<p>
-				<a data-bind="attr: { href: urlLink, title: name }, text: urlLink" target="_blank"></a>
+				<a data-bind="attr: { href: 'http://' + urlLink, title: name }, text: urlLink" target="_blank"></a>
 			</p>
 		</div>
 	</div>
